--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"build": "webpack --mode production"
 	},
 	"dependencies": {
+		"dotenv": "^8.2.0",
 		"firebase": "^7.15.0",
+		"global": "^4.4.0",
 		"react": "^16.13.1",
 		"react-custom-scrollbars": "^4.2.1",
 		"react-dom": "^16.13.1",
@@ -29,6 +31,7 @@
 		"concurrently": "^5.2.0",
 		"cross-env": "^7.0.2",
 		"css-loader": "^3.5.3",
+		"dotenv-webpack": "^1.8.0",
 		"file-loader": "^6.0.0",
 		"html-webpack-plugin": "^4.3.0",
 		"mini-css-extract-plugin": "^0.9.0",
