--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-	"presets": ["@babel/env", "@babel/react"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      { "targets": { "browsers": ["last 2 versions", ">= 5% in KR"] } }
+    ],
+    "@babel/react"
+  ]
 }
