--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"build": "webpack --mode production"
 	},
 	"dependencies": {
+		"@babel/polyfill": "^7.10.1",
 		"dotenv": "^8.2.0",
 		"firebase": "^7.15.0",
 		"global": "^4.4.0",
@@ -20,6 +21,8 @@
 		"react-redux-firebase": "^3.5.1",
 		"react-router-dom": "^5.2.0",
 		"redux": "^4.0.5",
+		"redux-saga": "^1.1.3",
+		"redux-saga-firebase": "^0.15.0",
 		"styled-components": "^5.1.1"
 	},
 	"devDependencies": {
