--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"firebase": "^7.15.0",
 		"global": "^4.4.0",
 		"react": "^16.13.1",
+		"react-app-polyfill": "^1.0.6",
 		"react-custom-scrollbars": "^4.2.1",
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.0",
