--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
 		"connected-react-router": "^6.8.0",
 		"dotenv": "^8.2.0",
 		"firebase": "^7.15.0",
-		"global": "^4.4.0",
 		"react": "^16.13.1",
 		"react-app-polyfill": "^1.0.6",
 		"react-custom-scrollbars": "^4.2.1",
 		"react-dom": "^16.13.1",
+		"react-loader-spinner": "^3.1.14",
 		"react-redux": "^7.2.0",
 		"react-redux-firebase": "^3.5.1",
 		"react-router-dom": "^5.2.0",
@@ -33,8 +33,6 @@
 		"@babel/preset-react": "^7.10.1",
 		"babel-loader": "^8.1.0",
 		"clean-webpack-plugin": "^3.0.0",
-		"concurrently": "^5.2.0",
-		"cross-env": "^7.0.2",
 		"css-loader": "^3.5.3",
 		"dotenv-webpack": "^1.8.0",
 		"file-loader": "^6.0.0",
