--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
 	},
 	"dependencies": {
 		"@babel/polyfill": "^7.10.1",
+		"@editorjs/editorjs": "^2.18.0",
+		"@editorjs/header": "^2.5.0",
+		"@editorjs/paragraph": "^2.7.0",
 		"connected-react-router": "^6.8.0",
 		"dotenv": "^8.2.0",
 		"firebase": "^7.15.0",
@@ -18,6 +21,7 @@
 		"react-app-polyfill": "^1.0.6",
 		"react-custom-scrollbars": "^4.2.1",
 		"react-dom": "^16.13.1",
+		"react-editor-js": "^1.6.2",
 		"react-loader-spinner": "^3.1.14",
 		"react-redux": "^7.2.0",
 		"react-redux-firebase": "^3.5.1",
