--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-dom": "^16.13.1",
 		"react-editor-js": "^1.6.2",
 		"react-loader-spinner": "^3.1.14",
+		"react-lottie": "^1.2.3",
 		"react-redux": "^7.2.0",
 		"react-redux-firebase": "^3.5.1",
 		"react-router-dom": "^5.2.0",
