--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,17 @@
 {
   "presets": [
-    [
-      "@babel/preset-env",
-      { "targets": { "browsers": ["last 2 versions", ">= 5% in KR"] } }
-    ],
+    // [
+    //   "@babel/preset-env",
+    //   { "targets": { "browsers": ["last 2 versions", ">= 5% in KR"] } }
+    // ],
+    ["@babel/preset-env", {
+      "targets": {
+        "browsers" : ["last 2 versions", "ie >= 11"]
+      },
+      "useBuiltIns": "usage",
+      "corejs":3,
+      "shippedProposals": true
+    }],
     "@babel/react"
   ]
 }
