--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"author": "chanki <chanki.kim89@gmail.com>",
 	"license": "MIT",
 	"scripts": {
-		"start": "webpack-dev-server --mode development --open --hot",
-		"build": "webpack --mode production"
+		"start": "webpack-dev-server --open ",
+		"build": "cross-env NODE_ENV=production webpack --progress"
 	},
 	"dependencies": {
 		"@babel/polyfill": "^7.10.1",
@@ -34,16 +34,19 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.10.2",
+		"@babel/plugin-transform-runtime": "^7.10.1",
 		"@babel/preset-env": "^7.10.2",
 		"@babel/preset-react": "^7.10.1",
 		"babel-loader": "^8.1.0",
 		"clean-webpack-plugin": "^3.0.0",
+		"core-js": "3",
 		"css-loader": "^3.5.3",
 		"dotenv-webpack": "^1.8.0",
 		"file-loader": "^6.0.0",
 		"html-webpack-plugin": "^4.3.0",
 		"mini-css-extract-plugin": "^0.9.0",
 		"node-sass": "^4.14.1",
+		"optimize-css-assets-webpack-plugin": "^5.0.3",
 		"sass-loader": "^8.0.2",
 		"style-loader": "^1.2.1",
 		"webpack": "^4.43.0",
