--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"license": "MIT",
 	"scripts": {
 		"start": "webpack-dev-server --open ",
-		"build": "cross-env NODE_ENV=production webpack --progress"
+		"build": "cross-env NODE_ENV=production webpack --mode production --progress",
+		"dev-build" : "webpack --mode development --progress"
 	},
 	"dependencies": {
 		"@babel/polyfill": "^7.10.1",
@@ -49,6 +50,7 @@
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
 		"sass-loader": "^8.0.2",
 		"style-loader": "^1.2.1",
+		"uglifyjs-webpack-plugin": "^2.2.0",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11",
 		"webpack-dev-server": "^3.11.0"
