--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"start": "cross-env webpack-dev-server --mode development --open ",
 		"build": "cross-env NODE_ENV=production webpack --mode production --progress",
-		"dev-build" : "webpack --mode development --progress"
+		"dev-build": "webpack --mode development --progress"
 	},
 	"dependencies": {
 		"@babel/polyfill": "^7.10.1",
@@ -31,6 +31,7 @@
 		"redux": "^4.0.5",
 		"redux-saga": "^1.1.3",
 		"redux-saga-firebase": "^0.15.0",
+		"regenerator-runtime": "^0.13.5",
 		"styled-components": "^5.1.1"
 	},
 	"devDependencies": {
