--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"@babel/polyfill": "^7.10.1",
 		"@editorjs/editorjs": "^2.18.0",
 		"@editorjs/header": "^2.5.0",
+		"@editorjs/image": "^2.4.2",
+		"@editorjs/inline-code": "^1.3.1",
+		"@editorjs/marker": "^1.2.2",
 		"@editorjs/paragraph": "^2.7.0",
 		"connected-react-router": "^6.8.0",
 		"dotenv": "^8.2.0",
